<resources>
    <string name="app_name">AndroidDemo</string>
    <string name="app_description">This is a sample application for the Android Training class
        &quot;Displaying Bitmaps Efficiently&quot;
        (http://developer.android.com/training/displaying-bitmaps/display-bitmap.html). It is not
        designed to be a full reference application but to demonstrate the concepts discussed in
        training course.</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>

    <!--rx-->
    <string name="doSomething">doSomething</string>
    <string name="rx_create">create</string>
    <string name="rx_just">just</string>
    <string name="rx_map">map</string>
    <string name="rx_zip">zip</string>
    <string name="rx_flatMap">flatMap</string>
    <string name="rx_concatMap">concatMap</string>
    <string name="rx_filter">filter</string>
    <string name="rx_take">take</string>
    <string name="rx_doOnNext">doOnNext</string>
    <string name="rx_timer">timer</string>
    <string name="rx_interval">interval</string>
    <string name="rx_single">single</string>
    <string name="rx_skip">skip</string>
    <string name="rx_concat">concat</string>
    <string name="rx_distinct">distinct</string>
    <string name="rx_buffer">buffer</string>
    <string name="rx_debounce">debounce</string>
    <string name="rx_defer">defer</string>
    <string name="rx_last">last</string>
    <string name="rx_merge">merge</string>
    <string name="rx_reduce">reduce</string>
    <string name="rx_scan">scan</string>
    <string name="rx_window">window</string>
    <string name="rx_PublishSubject">PublishSubject</string>
    <string name="rx_AsyncSubject">AsyncSubject</string>
    <string name="rx_BehaviorSubject">BehaviorSubject</string>
    <string name="rx_Completable">Completable</string>
    <string name="rx_Flowable">Flowable</string>
    <string name="welcome">TextView</string>
    <string name="textview">Hello World</string>
    <string name="imageButtonDescription" />
    <string name="add">add</string>
    <string name="textview1">Team A</string>
    <string name="textview2">Team B</string>
    <string name="scoreA">0</string>
    <string name="scoreB">0</string>
    <string name="button1">+1</string>
    <string name="button2">+2</string>
    <string name="button3">+3</string>
    <string name="undoButton">undo</string>
    <string name="resetButton">reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="nav_home_button">Button</string>
    <string name="detail">Detail</string>
    <string name="nav_detail_button">Button</string>
    <string name="one_fragment_button">进入</string>
    <string name="one_fragment_textview">0</string>
    <string name="two_fragment_textview">0</string>
    <string name="two_fragment_button1">+1</string>
    <string name="two_fragment_button2">-1</string>
    <string name="two_fragment_button3">返回</string>
</resources>